# DicomViewer

./: .gitignore  1.ps1  1.sh  2.sh  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  gen_src.py  source_list.cmake  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ports-overlay/gdcm/: portfile.cmake
source/: FileMenu.cpp  FileMenu.h  GUICenter.cpp  GUIWindow.cpp  GUIWindow.h  lib.cpp  main.cpp
source/core/controller/: CoreController.cpp  CoreController.h
source/core/lib/: DicomReader.cpp  DicomReader.h
source/core/model/: CoreRepository.cpp  CoreRepository.h  Image.cpp  Image.h  Patient.cpp  Patient.h  Series.cpp  Series.h  Study.cpp  Study.h
source/gui/: GUICenter.cpp  GUICenter.h
source/lib/: FilesImporter.cpp  FilesImporter.h
source/menu/: FileMenu.cpp
source/window/: GUIWindow.cpp  GUIWindow.h
test/: CMakeLists.txt
test/source/: DicomViewer_test.cpp
tools/: new_c_class.py  new_qt_object.py
triplets/: x64-linux-share-debug-release.cmake  x64-linux.cmake
